[tool.poetry]
name = "masp"
version = "0.1.0"
description = "Not the Museu de Arte de São Paulo!"
authors = ["Pierre-Alexandre <beatsontapes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]
flask = "^3.0.2"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"


[tool.poetry.group.dev.dependencies]
flask-cors = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
